# ros_envelope-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  readme.md  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/ros_envelope/: ros_envelope.h  ros_envelope_iface.h  ros_envelope_iface_impl.h  ros_envelope_template_impl.h
src/: RosEnvelopeInterface.cpp
test/src/: RosEnvelopeTest.cpp
